<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sleep_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/sleep_timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_app"
        app:showAsAction="never" />
</menu>
